<resources>
    <string name="app_name">Calculator</string>
    <string name="a">=</string>
    <string name="ac">AC</string>
    <string name="b">/</string>
    <string name="c">%</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="mul">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="minus">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="_3">3</string>
    <string name="calculator">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">+</string>
    <string name="add">+</string>
    <string name="five">5</string>
    <string name="_four">4</string>
    <string name="six">6</string>
    <string name="sub">-</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="mult">*</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="mod">%</string>
    <string name="modu">/</string>
    <string name="clear">Clear</string>
    <string name="equals">=</string>
    <string name="todo">TODO</string>
    <string name="calci_is_ready_with_high_performance">Calci is ready with high performance...!</string>
    <string name="enter">Enter</string>
</resources>